3-istio-service-mesh/ingress/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-app-vs
  namespace: default
spec:
  hosts:
    - "my-service.example.com"
  gateways:
    - istio-system/my-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: my-service
            port:
              number: 80
